- FIX: Layout of the page, will check again when collection is too long - FIX: Regression with editing content

--- a/Modules/ContentSystem/Views/editor-editframe.less
+++ b/Modules/ContentSystem/Views/editor-editframe.less
@@ -202,7 +202,6 @@ a.success:hover {
         margin-top: 20px;
         text-transform: uppercase;
         height: 40px;
-        position: absolute;
 
         .backbutton {
             font-size: 100%;
@@ -227,15 +226,6 @@ a.success:hover {
             padding-top: 10px;
             opacity: 0.8;
         }
-    }
-
-    #menucontent {
-
-        position: absolute;
-        left: 10px;
-        right: 0;
-        top: 50px;
-        overflow-y: auto;
     }
 
     h1 {
